<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_one_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/my_nanodegree_app_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/my_nanodegree_apps"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linear_layout_one_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_nanodegree_app_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#424242"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="8dp">

        <Button
            android:id="@+id/spotify_streamer_button_id"
            android:layout_width="208dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="#ffffde36"
            android:onClick="onClickSpotifyStreamer"
            android:text="@string/spotify_streamer"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/scores_app_id"
            android:layout_width="208dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="#ffffde36"
            android:onClick="onClickScoresApp"
            android:text="@string/scores_app"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/library_app_id"
            android:layout_width="208dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="#ffffde36"
            android:onClick="onClickLibraryApp"
            android:text="@string/library_app"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/build_it_bigger_id"
            android:layout_width="208dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="#ffffde36"
            android:onClick="onClickBuildItBigger"
            android:text="@string/build_it_bigger"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/xyz_reader_id"
            android:layout_width="208dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="#ffffde36"
            android:onClick="onClickXYZReader"
            android:text="@string/xyz_reader"
            android:textColor="#ff000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/capstone_id"
            android:layout_width="208dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="#ffff2c92"
            android:onClick="onClickCapstone"
            android:text="@string/my_own_app"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
